--- a/src/components/Map/Map.scss
+++ b/src/components/Map/Map.scss
@@ -1,26 +1,45 @@
-.map-container {
-  text-align: left;
-  height: 93vh;
+.main {
+  display: flex;
+  flex-direction: column;
+}
+
+.map-container, .mapboxgl-canvas-container {
+  display: flex;
+  flex-flow: column;
   width: 100vw;
+  height: 100%;
   margin: 0;
   padding: 0;
+  text-align: left;
+}
+
+#content-container {
+  width: 100vw;
+  height: 100%;
+  max-width: none !important;
+  margin: 0;
+}
+
+.mapboxgl-canvas {
+  width: 100%;
+  height: 100%;
 }
 
 #info-message-box {
   position: absolute;
   width: auto;
   height: auto;
+  padding: 10px;
   right: 1vw;
   bottom: 1vh;
   z-index: 4;
+  font-size: 1.2rem;
   color: white;
   background-color: black;
-  padding: 10px;
-  font-size: 1.2rem;
 }
 
-#content-container {
-  margin: 0;
+#info-message-box.failed {
+  background-color: darkred;
 }
 
 .container {
