--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,8 @@
+body, html {
+  width: 100vw;
+  height: 100vh;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -7,4 +12,6 @@ body {
 
 .main {
   padding: 0;
+  width: 100vw;
+  height: 100vh;
 }
