--- a/src/components/AdminPanel/AdminPanel.scss
+++ b/src/components/AdminPanel/AdminPanel.scss
@@ -1,3 +1,6 @@
+@import "../../variables.scss";
+$_BUTTON_COLOR_HIGHLIGHT: rgb(0, 0, 0);
+
 #admin-panel {
   visibility: none;
   position: absolute;
@@ -14,17 +17,30 @@
 }
 
 #admin-panel-toggle {
-  width: 150px;
-  height: 25px;
+  width: 180px;
+  height: 35px;
   z-index: 5;
+  font-size: 1.1rem;
   line-height: 12px;
-  background-color: white;
+  color: $hackerGreen;
+  background-color: $_BUTTON_COLOR_HIGHLIGHT;
+  border: 1px solid $hackerGreen;
   border-radius: inherit;
 }
 
 #admin-panel button {
   text-align: center;
   margin: 0 10px 10px 0;
+}
+
+#admin-panel button {
+  text-align: center;
+  margin: 0 10px 10px 0;
+}
+
+/* Mode Buttons */
+#admin-panel button.selected {
+  background-color: $_BUTTON_COLOR_HIGHLIGHT;
 }
 
 #admin-panel > button#close-button {
